[package]
name = "ttx-rs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"


[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
# NOTE: we temporarily specify this dependency via git.
read-fonts = { git = "https://github.com/cmyr/fontations", rev = "dcac61b" }
font-types = { git = "https://github.com/cmyr/fontations", rev = "dcac61b", features = ["std"] }
#simple-xml-builder = "1.1.0"
xml-builder = "0.5.0"
